--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,11 @@
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
         "gregwar/captcha": "^1.1",
+        "intervention/image": "^2.6",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "overtrue/laravel-filesystem-qiniu": "^1.0",
+        "predis/predis": "~1.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
